--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,87 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Zhiyi Lai
     - name: Date of Birth
-      value: 14th March 1879
+      value: 1996, may, 2nd
     - name: Languages
-      value: English, German
+      value: Chinese(Native), English(Fluent)
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: Master
+      institution: UNIVERSITY OF MASSACHUSETTS AMHERST
+      year: 2021
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+        - Master's in Computer Science
+        - "GPA: 3.925 / 4.0"
+    - title: Bachelor
+      institution: HUAZHONG UNIVERSITY OF SCIENCE & TECHNOLOGY
+      year: 2018
       description:
-        - Description 1.
-        - Description 2.
+        - Bachelor of Computer Science and Technology
+        - Outstanding Graduates
+        - "GPA: 3.63 / 4.0"
+    - title: Summer Program
+      institution: NATIONAL UNIVERSITY OF SINGAPORE
+      year: 2017
+      description:
+        - Computer Graphics Summer Program
+        - "Grade: A"
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Senior Machine Learning Engineer
+      institution: Xiaomi EV
+      year: 2021 - Present
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
+        - title: Build video retrieval system with 500k captioned video data
           contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
-      description:
-        - Description 1.
-        - Description 2.
+            - Optimized LLaVA-based LMM through SFT/LoRA, empowering Auto-Triage’s problem distribution.
+            - Build a self-driving multi-modal dataset including 50k video data and 900k image data.
+        - title: Enhance the image retrieval system with large detection and segmentation model
+          contents:
+            - Developed a large detection and segmentation model based on Grounding-DINO.
+            - Compared the trained model with CLIP-based retrieval system, the accuracy of detecting special obstacles has increased by 50% on average, mined over 600k false and missed detection data.
+            - Supports 100+ types of special obstacle detection (municipal vehicles, small animals). The entire process of mining new categories is completed within one week.
+        - title: Developed a CLIP-based image retrieval system
+          contents:
+            - Maintained a vector database of 7.5 million frames and about 1 million kilometers of data with CLIP.
+            - Improved the road condition and single target search results by combining the detection results.
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
+- title: Projects
   type: time_table
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
-
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
-      items:
-        - Nobel Prize in Physics
-        - Matteucci Medal
-    - year: 2029
-      items:
-        - Max Planck Medal
+    - title: <a style="text-align:left;">LOASIS</a><span style="float:right;">Independent Developer</span></a>
+      year: 2024-now
+      description:
+        - title: A game project based on LLM, using LLM as the host to generate DnD-Like game stories.
+          contents:
+            - Adjust the generated story by Prompt Engineering to make it fulfill the game’s theme and length limit.
+            - Use Streamlit to build the front-end, and use MongoDB to store game and user data.
+    - title: <a style="text-align:left;", href="https://github.com/L4zyy/awesome-ai-in-game">Awesome AI in Game</a><span style="float:right;">Open Source Contributor</span></a>
+      year: 2024-now
+      description: An open source page that organizes game-related AI papers and projects. Including action generation, RL and LLM-related game papers as well as open source game environments, LLM games and more.
+    - title: <a style="text-align:left;", href="https://github.com/camel-ai/camel">CAMEL</a><span style="float:right;">Open Source Contributor</span></a>
+      year: 2024-now
+      description:
+        - title: CAMEL is an open-source library designed for the study of autonomous and communicative agents.
+          contents:
+            - Implemented Azure OpenAI API support for CAMEL.
 
 - title: Academic Interests
   type: nested_list
   contents:
-    - title: Topic 1.
+    - title: AI in Games
       items:
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
+        - LLM generated game content
+        - PCG (Programmatic Content Generation)
+        - Animation
+        - 3D Generation
 
 - title: Other Interests
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - <b>FPS Games:</b> Valorant, CS2, Overwatch, etc.
